@@ -176,6 +176,10 @@ bool HTMLAppletElementImpl::callMember(const QString & name, const QStringList &
 #if APPLE_CHANGES
 KJS::Bindings::Instance *HTMLAppletElementImpl::getAppletInstance() const
 {
+	KHTMLPart* part = getDocument()->part();
+	if (!part->javaEnabled())
+		return 0;
+
     if (appletInstance)
         return appletInstance;
     
@@ -186,7 +190,6 @@ KJS::Bindings::Instance *HTMLAppletElementImpl::getAppletInstance() const
             // Call into the part (and over the bridge) to pull the Bindings::Instance
             // from the guts of the Java VM.
             void *_view = r->widget()->getView();
-            KHTMLPart* part = getDocument()->part();
             appletInstance = part ? KWQ(part)->getAppletInstanceForView((NSView *)_view) : 0;
         }
     }
